2007-04-13 Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: Changed 'save as' to 'save' so
	mnemonics won't overlap.
	* plugins/interface_view.glade: Added back mnemonics, fixed
	expanders visibility problem.
	* plugins/interface_view.py: Don't overwrite label text, it erases 
	mnemonics.

2007-04-12 Eitan Isaacson  <eitan@ascender.com>

	* debian/changelog: Corrected version.
	* src/lib/accerciser/accerciser.py: Fixed crasher (bug 429184)

2007-04-12 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am: Added uninstall gconf schema section (bug 429097).

2007-04-12 Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.glade: Changed mnemonics to remove duplicates.
	* plugins/interface_view.glade: Removed expander mnemonics will be
	fixed with bug 429132. Changed mnemonics to remove duplicates.
	* src/accerciser.glade: Changed mnemonics to remove duplicates
	(bug 424465).
	* src/lib/accerciser/icons.py: Small cleanup.

2007-04-12 Peter Parente  <parente@cs.unc.edu>

	* accerciser.spec.in: Added gconf schema install, uninstall, and files

2007-04-11 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am: Fixed a few things that broke distcheck.
	* accerciser.schemas.in: Added, o allow translation.
	* accerciser.schemas: Removed.
	* help/C/accerciser.xml: Fixed some errors.
	* po/POTFILES.in: Added schema file for translation.
	
2007-04-10 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am:
	* configure.in:
	* icons/Makefile.am:
	* icons/custom.png:
	* pixmaps:
	* pixmaps/Makefile.am:
	* pixmaps/acceleratorlabel.png:
	* pixmaps/alert.png:
	* pixmaps/animation.png:
	* pixmaps/calendar.png:
	* pixmaps/canvas.png:
	* pixmaps/care.png:
	* pixmaps/character.png:
	* pixmaps/chart.png:
	* pixmaps/checkbox.png:
	* pixmaps/clock.png:
	* pixmaps/colorchooser.png:
	* pixmaps/column.png:
	* pixmaps/combobox.png:
	* pixmaps/cursor.png:
	* pixmaps/desktopframe.png:
	* pixmaps/desktopicon.png:
	* pixmaps/dial.png:
	* pixmaps/directorypane.png: