@@ -1,3 +1,8 @@
+2007-04-14 Eitan Isaacson  <eitan@ascender.com>
+
+	* plugins/api_view.py: Made some text translatable.
+	* src/lib/accerciser/i18n.py.in: Enable i18n in glade files.
+
 2007-04-13 Eitan Isaacson  <eitan@ascender.com>
 
 	* plugins/event_monitor.glade: Changed 'save as' to 'save' so
